css/global/_global.scss
html {
	font-size: 18px;
	@media (min-width: 768px) {
		font-size: between(20px, 18px, 768px, $max-width);
	}
	@media (min-width: $max-width) {
		font-size: 20px;
	}
	-webkit-overflow-scrolling: touch;

	* {
		@include box-sizing(border-box);
		@include textSize(none);
		padding: 0;
		margin: 0;
	}
}

body {
	// Structure
	position: relative;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
	padding: 0;
	margin: 0;
	overflow-x: hidden;
	@include box-sizing(border-box);
	// Background
	background-color: $clr_bg-accent;
	// Text
	::-moz-selection {
		color: $clr_bg-main;
		background: rgba($clr_black, $opacity-solid);
	}

	::selection {
		color: $clr_bg-main;
		background: rgba($clr_black, $opacity-solid);
	}
	// Define the centralised maximum width for the main body content
	.container {
		padding: 0;
		font-size: 0;
		text-align: center;
	}

	#main {
		transform: translate(0, 0);
		-webkit-transform: translate(0, 0);
		transition: $ease-main $speed-fast;

		&.open {
			transform: translate(-300px, 0);
			-webkit-transform: translate(-300px, 0);
		}
	}

}
// Scrollbars - Chrome/WebKit only. Will appear as normal in other browsers.
::-webkit-scrollbar {
	width: ($baseline / 2);
	background: rgba($clr_black, $opacity-solid);
}

::-webkit-scrollbar-track {
	position: fixed;
	top: 0;
	bottom: 0;
	right: 0;
	left: calc(100% - 10px);
}

::-webkit-scrollbar-thumb {
	background: rgba($clr_black, $opacity-solid);
	border: 1px solid rgba($clr_bg-main, $opacity-standard);
	@include border-radius(10px);

	&:hover {
		background: rgba($clr_grey-mid, $opacity-solid);
	}
}

.central-column {
	max-width: $max-width;
	margin-right: auto;
	margin-left: auto;
}

